src/objects/Admission__c.object
<CustomObject>
    <description>NOTES Admissions track a Person Being Served&apos;s relationship with The MENTOR Network. There is a validation rule that allows only one active Admission per state per person.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies the current episode for an individual. Only one episode for an individual may be active at one time. TODO: Use a workflow to sychronize the active state with the Episode.Status</description>
        <inlineHelpText>Identifies the current episode for an individual. Only one episode for an individual may be active at one time.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_admission_ID__c</fullName>
        <description>External ID that is set when Admission reaches active status and is cleared out when Admission reaches inactive status.</description>
        <externalId>true</externalId>
        <label>Active Admission ID (Hidden)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Effective_DateTime__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Admission_Hidden__c</fullName>
        <label>Admission # (Hidden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment_Diagnosis__c</fullName>
        <description>Collected during assessment phase</description>
        <label>Assessment Diagnosis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Avatar_Upload_ID__c</fullName>
        <externalId>true</externalId>
        <label>Avatar Upload ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharged_Date__c</fullName>
        <label>Discharged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharged_Status__c</fullName>
        <label>Discharged Status</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Admission effective date.</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_Offering__c</fullName>
        <label>Network Offering</label>
        <picklist>
            <picklistValues>
                <fullName>ABI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Admissions</relationshipLabel>
        <relationshipName>Episodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <formula>Person_Being_Served__r.Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Discharge__c</fullName>
        <label>Reason for Discharge</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <inlineHelpText>Date the Referring Agency sent the Referral.</inlineHelpText>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referred_Out_Agency_Name__c</fullName>
        <description>Name of the agency the individual was referred-out to</description>
        <inlineHelpText>Name of the agency the individual was referred-out to</inlineHelpText>
        <label>Referred-Out Agency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_Out_Date__c</fullName>
        <description>Date the individual was referred-out</description>
        <inlineHelpText>Date the individual was referred-out</inlineHelpText>
        <label>Referred-Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referred_Out_Reason__c</fullName>
        <description>A short description of the reason the individual was referred-out</description>
        <inlineHelpText>A short description of the reason the individual was referred-out</inlineHelpText>
        <label>Referred-Out Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Agency__c</fullName>
        <description>Name of referring agency</description>
        <label>Referring Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Assignments_With_No_End_Date__c</fullName>
        <label>Service Assignments With No End Date</label>
        <summaryFilterItems>
            <field>Service_Assignment__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Service_Assignment__c.Admission__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Admission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Admission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Discharge_Date_After_Intake_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c &gt;  Discharged_Date__c</errorConditionFormula>
        <errorDisplayField>Discharged_Date__c</errorDisplayField>
        <errorMessage>Discharge Date must be greater than or equal to Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discharged_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Discharged&quot;),
OR(
ISNULL(Discharged_Date__c),
ISPICKVAL(Discharged_Status__c,&quot;&quot;),
ISBLANK(Reason_for_Discharge__c)))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>An Admission must have a Discharged Date, Discharged Status, and Reason for Discharge, before it can be discharged.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discharged_Requirements_2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Status__c, &quot;Discharged&quot;)), 
OR( 
NOT(ISNULL(Discharged_Date__c)), 
NOT(ISPICKVAL(Discharged_Status__c,&quot;&quot;)), 
NOT(ISBLANK(Reason_for_Discharge__c))))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status must be changed to Discharged when entering a Discharge Date/Reason/Status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referred_Out_Details</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c , &quot;Referred Out&quot;),
OR(
ISBLANK(Referred_Out_Date__c),
ISBLANK(Referred_Out_Agency_Name__c),
ISBLANK(Referred_Out_Reason__c)
) 
)</errorConditionFormula>
        <errorMessage>For Admission records with a status of &quot;Referred Out&quot;, please include all referred out details below (i.e. data, agency name and reason).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Assignment_WNo_End_Date_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Service_Assignments_With_No_End_Date__c  &gt; 0, OR(text( Status__c)=&quot;Completed&quot;,text( Status__c)=&quot;Discharged&quot;))</errorConditionFormula>
        <errorMessage>You cannot mark this record Completed or Discharged because there are Service Assignments that do not have an end date set. Please set end dates for all Service Assignments and try again.</errorMessage>
    </validationRules>
</CustomObject>